- added modal window

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,11 +1,16 @@
-@import '~bootstrap/dist/css/bootstrap-reboot.min.css';
-@import url("https://fonts.googleapis.com/css2?family=Bitter:wght@100;400;700&display=swap");
+@import "~bootstrap/dist/css/bootstrap-reboot.min.css";
+@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
 @import "./App.scss";
 
 body {
-  font-family: "Bitter", serif;
+  font-family: "Inter", sans-serif;
 }
 
 p {
   margin: 0;
+}
+
+input[type=checkbox] {
+  width: 20px;
+  height: 20px;
 }
