--- a/src/components/UI/Modal/modal.scss
+++ b/src/components/UI/Modal/modal.scss
@@ -1,3 +1,5 @@
+@import "../../../styles/helpers/variables/index";
+
 .modal {
   position: fixed;
   top: 0;
@@ -5,7 +7,7 @@
   bottom: 0;
   left: 0;
   display: none;
-  background: rgba(0, 0, 0, 0.4);
+  background: rgba(0, 0, 0, 0.5);
 
   &.is-active {
     display: flex;
@@ -17,11 +19,11 @@
     position: relative;
     min-width: 350px;
     padding: 30px;
-    border-radius: 5px;
-    background: #ffffff;
+    border-radius: 10px;
+    background: $white;
   }
 
-  &__close {
+  &__icon-close {
     position: absolute;
     top: 0;
     right: 0;
