--- a/src/components/UI/Button/button.scss
+++ b/src/components/UI/Button/button.scss
@@ -1,30 +1,16 @@
 @import "../../../styles/helpers/variables/index";
 
 .button {
-  font-size: 18px;
+  height: 50px;
+  padding: 5px 10px;
   transition: .5s;
   border: 2px solid $purple;
   outline: none;
   background: $white;
 
-  &_primary {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-
-    &:hover {
-      border: 2px solid $white;
-      background: $purple;
-    }
-  }
-
-  &_secondary {
-    height: 50px;
-
-    &:hover {
-      color: $white;
-      border: 2px solid $white;
-      background: $purple;
-    }
+  &:hover {
+    color: $white;
+    border: 2px solid $white;
+    background: $purple;
   }
 }
